--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@mui/system": "^5.15.13",
     "@reduxjs/toolkit": "^2.2.1",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.6",
